# r-mmdc

./: Cargo.toml  LICENSE  README.md
src/: cpu_info.dummy  main.rs  soc_id.dummy
