[package]
name = "r-mmdc"
version = "0.1.0"
authors = ["blatzfab <fabianblatz@gmail.com>"]
edition = "2018"
description = "Rust implementation of mmdc"
homepage = "https://github.com/faxe1008/r-mmdc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
regex = "1"
time = "0.2.18"
structopt = "0.3"
